# FootyForecast

./: .gitattributes  .gitignore  CLAUDE.md  README.md  dev.ps1  run_api.ps1  run_grading.ps1  run_markets.ps1  run_previews.ps1  run_simulator.ps1  run_trivia.ps1  run_update.ps1  run_web.ps1
.claude/: settings.json
docs/: FootyForecast_PRD.md  build-log.md  data-inventory.md  frontend-reference.md  linkedin-project-summary.md  model-reference.md  review.md
docs/api/: openapi.yaml
docs/decisions/: ADR-000-template.md  ADR-001-openapi-contract.md  ADR-002-schema-conventions.md  ADR-003-ingestion-sources.md  (+3 more)
go/: README.md
python/: .env.example  README.md  pyproject.toml  run_ingest.bat
python/data/: backtest_wc2022.csv  wc2026_fixtures_cache.json
python/data/traces/: goals_model_meta.json
python/footy/: db.py  grading.py  player_predictions.py  previews.py  scheduler.py  trivia.py
python/footy/analysis/: match_analyzer.py
python/footy/features/: training_data.py
python/footy/ingest/: club_stats.py  espn.py  historical.py  market_map.py  markets.py  scorers.py  sofascore.py  team_map.py  wc2026.py
python/footy/models/: backtest.py  elo_predict.py  goals.py  predict.py  scorer.py  venues.py
python/footy/ratings/: elo.py
python/tests/: conftest.py  test_backtest.py  test_elo.py  test_goals.py  test_grading.py  test_historical.py  test_markets.py  test_player_predictions.py  test_previews.py  test_scorers.py  test_trivia.py  test_wc2026.py
supabase/: seed.sql
web/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+111 files in other folders)
