[project]
name = "footy"
version = "0.1.0"
description = "FootyForecast Python pipeline: ingestion, features, models"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pymc>=5.10",
    "arviz>=0.19",
    "netcdf4>=1.7.4",
    "matplotlib>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests touch the real Postgres (TRUNCATE, INSERT) and are excluded
# from normal runs to protect production data. Run them explicitly with:
#   uv run pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: tests that require a running Postgres with migrations applied",
]
